--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@reach/dialog": "^0.16.2",
     "axios": "^0.26.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.8.1",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
