--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "bootstrap-icons": "^1.8.1",
     "dotenv": "^16.0.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-router-dom": "5.2.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
