--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "private": true,
   "version": "0.0.0",
   "scripts": {
+    "start": "node server/index.js",
+    "server": "nodemon -r dotenv/config server/index.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -10,12 +12,21 @@
   "dependencies": {
     "@reach/dialog": "^0.16.2",
     "axios": "^0.26.1",
+    "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.8.1",
+    "cors": "^2.8.5",
     "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "http-status-codes": "^2.2.0",
+    "luxon": "^2.3.1",
+    "nodemon": "^2.0.15",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "5.2.0"
+    "react-router-dom": "5.2.0",
+    "sequelize": "^6.17.0",
+    "sql-log-prettifier": "^0.1.2",
+    "sqlite3": "^5.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
