--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "luxon": "^2.3.1",
     "nodemon": "^2.0.15",
     "react": "^17.0.2",
+    "react-datepicker": "^4.7.0",
     "react-dom": "^17.0.2",
     "react-router-dom": "5.2.0",
     "sequelize": "^6.17.0",
